tests/negative/test_expr_addrof_data_member_non_ref.orb
data Foo { i32 x; }

fnc foo() Foo {
    let Foo f;
    ret f;
}

fnc main() {
    &(foo().x);
}